# N7

./: .gitattributes  .gitignore  .gitmodules  README.md  connect4_à_tester.py
1A/Analyse de données/TP1/: ACP.m  correlation_contraste.m  exercice_1.m  exercice_1.mat  exercice_2.m  exercice_2_mais_pour_exo_3.m  exercice_3.m  exercice_3.mat
1A/Analyse de données/TP2/: bezier.m  donnees.m  donnees.mat  estimation_lois.m  exercice_1.m  exercice_2.m  exercice_3.m  moindres_carres.m  moindres_carres_paire.m  parametres_lois.mat  points_de_controle.mat  simulation_flamme.m  texture.mat  tirage_aleatoire.m
1A/Analyse de données/TP3/: classif_MAP.m  classif_MAP_4.m  classif_MV.m  classif_MV_4.m  donnees_app.m  estimation_mu_Sigma.m  exercice_0.m  exercice_1.m  exercice_2.m  exercice_3.m  exercice_4.m  vraisemblance.m
1A/Analyse de données/TP4/: SVM_1.m  SVM_2.m  exercice_0.m  exercice_1.m  exercice_2.m  exercice_3.m
1A/Analyse de données/projet_anal_1A/: .gitignore  EXT2.m  SVM_1.m  SVM_2.m  SVM_2_souple.m  SVM_3.m  SVM_3_souple.m  exercice_0.m  exercice_2_souple.m  exercice_3.m  exercice_3_souple.m  rapport.tex
1A/Anglais/: CV.odt  Minutes.odt  Newsround.txt  preparation_call.txt  sao_minutes.txt  test anglais réponses.odt
1A/Anglais/Meeting/: Information Atraxian Star System.odt  Meeting agenda.odt  Meeting guide.txt  MyMeeting.txt
1A/Architecture/minicraps/: sequenceur_test.txt
1A/Automatique/TP01/: TP1_2.slx
1A/Automatique/TP02/: mon_pendule_inv_echant_etu_qui_marche_pas.slx
1A/Automatique/etudiants-master/: .gitignore  README.md
1A/CalculScientifique/: A_200_1.mat  A_200_4.mat  A_300_4.mat
1A/CalculScientifique/TP1/: cgs.m  mgs.m  tp.m
1A/CalculScientifique/code_fourni/: power_v12.m  subspace_iter_v0.m  test_v0v1.m  test_v11.m
1A/CalculScientifique/projet/: compression.m  image_compression_method2.m
1A/CalculScientifique/projet_cs/: Projet_CS.txt  ReconstructionImage.asv  ReconstructionImage.m  template_rapport_p1.tex  template_rapport_p2.tex
1A/Env_Info/: .templogin  .tempsh  Env_Info_tuto.html  etape2  etape2.c  etape3.txt  etape5.txt  etape6.txt  fic_quota  jdp  progs_C.tar  test_vim.txt  tps_C.tar
1A/Japonais/: .Japan7_cours.txt.swp  VideoJaponais.txt  archive_recette_oral_avril.txt  recette_oral_avril.txt  true_recette_oral.txt  verbe en te et phrases exempke.png.kra  videojpn_project.kdenlive
1A/Japonais/Japan7/: Séance4.txt
1A/Japonais/video_jap/: VideoJaponais.txt  ezfsfsedef.ove  true_recette_oral.txt
1A/LanguageC/: 1SN_LangageC_C1.html  1SN_LangageC_C1.ipynb  Bilan2_Exercice1.txt  a.out  assert-comprendre  monnaie.c
1A/LanguageC_S6/: 1SN_LangageC_C2_Bilan.c
1A/LanguageC_S6/HTML/: 1SN_LangageC_C2.html  1SN_LangageC_C3.html  1SN_LangageC_Extra.html
1A/LanguageC_S6/Notebooks/: 1SN_LangageC_C2.ipynb  1SN_LangageC_C3.ipynb  1SN_LangageC_Extra.ipynb
1A/Modealisation/BE_2019/: #ex1.v#  #ex2.v#  .Naturelle.aux  Naturelle.glob  Naturelle.vo  ex1.v  ex2.v
1A/Modealisation/TP1/: #TP1.v#  .naturelle.aux  .nfs0000000000cd09f60000071f  tp1.v
1A/Modealisation/TP2/: tp2.v
1A/Modealisation/TP3/: voleurs.mlw  voleurs.mlw.bak
1A/Modealisation/TP4/: #induction_etu.v#  induction_etu.v
1A/Modealisation/TP5/: induction_etu.mlw
1A/Modealisation/TP6_Hoare/: ascendant_FactorielleAscendant_VC_factorielle_ascendant_1.v  ascendant_FactorielleAscendant_VC_factorielle_ascendant_2.v  descendant_FactorielleDescendant_VC_factorielle_descendant_1.v  descendant_FactorielleDescendant_VC_factorielle_descendant_1.v.bak  division_Division_VC_division_1.v  pgcd_PGCDEuclide_VC_pgcd_euclide_1.v  pgcd_PGCDEuclide_VC_pgcd_euclide_1.v.bak  why3mnexercicemn4_Somme_VC_somme_1.v
1A/Modealisation/TP7_Induction/: induction_etu.v
1A/Modealisation/TP_Induction/: #induction_etu.v#
1A/Modealisation/be_2022_S2_Canon/: ._coq_exercice_1.v  coq_exercice_1.v  coq_exercice_2.v  coq_exercice_3.v  why3_exercice_4.mlw  why3_exercice_4.mlw.bak
1A/Optimisation/TP-diff-finies/: C14_diff_finies.m  C14_fig_Gauss_Newton1.eps  C14_fig_Gauss_Newton2.eps  GN_ref.p  diff_finies_avant.m  diff_finies_centree.m  exem1_diff_finies.m  exem_1_fig_GN1_exem1.eps  exem_1fig_GN2_exem1.eps  main_diff_finies_cosinus.m  res_C14_diff_finies.txt  res_exem1_diff_finies.txt
1A/Optimisation/TP1_Moindre_carré/: Algo_Gauss_Newton.asv  Algo_Gauss_Newton.m  Algo_Newton.m  C14_results.txt  Modelisation_C14.asv  Modelisation_C14.m
1A/PIM/Autre/: exercice_types.adb
1A/PIM/PR01/: exemple_alea.adb  mesure_temps.adb  multiplications.adb
1A/PIM/PR02/: LISEZ-MOI.txt  evaluer_alea_lca.adb  evaluer_alea_th.adb  lca.adb  lca.ads  lca_sujet.adb  script.sh  test_lca.adb  test_th.adb  th.adb  th.ads  th_sujet.adb
1A/PIM/PROJET/: manuel d'utilisation.tex
1A/PIM/PROJET_trucs_en_plus/: Module AdresseIP.txt  Module Cache.txt  Module TableRoutage.txt
1A/PIM/TD4/: ex2_3_4_tableaux.adb  robot.adb
1A/PIM/TD8_Alloc_dynamique/: liste_chainee.adb  liste_chainee.ads
1A/PIM/TP06_Alloc_Dynamique/: exemples_memoire_dynamique.adb  (+3 more)
1A/SEC/: tubes_ex.c
1A/SHS/: presentation.txt
1A/TOB/: .gitignore
1A/Telecomunications/: Partie4_2.m  new_1_4.m  parti1_4.asv  parti1_4.m  partie1.m  partie1_2.m  partie1_3_1.m  partie1_3_2.m  str2bin.m  texte_binaire.m
2A/Graphe/: Cargo.toml
2A/IDM/: .gitignore  .project
2A/Optimisation/: canon_ayoub_L2.tgz  notes.txt
2A/PF/: .gitignore
2A/Prolog/: mp.pl
2A/RechercheOperationelle/: notes.txt
2A/SHS/: Internship Report.odt
2A/STDL/TP2-Types/: Ast.ml  Main.ml  MiniML.ml  Semantics.ml  Test.ml  Types.ml  dune  lexer.mll  parser.mly
2A/STDL/TP2-Types/exemples/: exemple-13.mml  exemple-14.mml  exemple-15.mml  exemple-17.mml
2A/SystèmesDeTransitions/: .gitignore  README  README.html  mc2.cfg  mc2.tla
2A/Web/: .gitignore  clean.sh  deploy.sh  server.sh
3A/: new_platform.igssystem  run.sh  runbin.sh
3A/IHM/: README.md  runbin.sh
3A/ihm/: CMakeLists.txt
3A/world/: CMakeLists.txt
3A/world/builds/cmake/: FindPROTOBUF-C.cmake  NSIS.template.in
3A/world/src/: utils.c
Other/: CV.odt
SHS/: presentation.txt
Scripts/: fic_quota  lsalles.sh  quotadangereux.sh
(+2670 files in other folders)
